update to mongodb 4.2 and PHP 7.x

--- a/public/assets/layouts/layout/css/themes/darkblue.css
+++ b/public/assets/layouts/layout/css/themes/darkblue.css
@@ -24,7 +24,7 @@
     .page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-toggle:hover {
       background-color: #3f4f62; }
       .page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-toggle:hover > i {
-        color: #a4aebb; }
+        color: #337ab7; }
     .page-header.navbar .top-menu .navbar-nav > li.dropdown.open .dropdown-toggle {
       background-color: #3f4f62; }
       .page-header.navbar .top-menu .navbar-nav > li.dropdown.open .dropdown-toggle > i {
