--- a/public/assets/layouts/layout/css/layout.css
+++ b/public/assets/layouts/layout/css/layout.css
@@ -40,7 +40,7 @@ Page Header
   min-height: 50px;
   filter: none;
   background-image: none;
-  border-bottom: 2px solid #e4032e;
+  border-bottom: 2px solid #5584AC;
   /* Fixed header */
   /* Header logo */
   /* Search box */
